lib/tools/orbit/test_output/advanced_runcore_test.output
Flow compiler (3rd generation)

Processing 'orbit' on http server

tests/advanced_runcore_test.orb: tests/advanced_runcore_test.orb:4:12: Parse error
let arr1 = [10, 20, 30, 40, 50];
           ^
